# universal_transcoder

./: .gitignore  Example6-microphone_encoding_to_ambisonics.py  LICENSE  README.md  case1-2-ambisonics_decoding.py  case3-downmix-vbap_decoding.py  case4-panning_no_optim.py  ex1_5OAto704.py  ex1_ambisonics_decoding_50Ato714.py  ex2_704to5OA.py  ex2_ambisonics_decoding_FOAto51.py  ex3_ei_transcoding_714to512.py  ex3_pv_transcoding_714to512.py  ex4_ObjectTo50.py  ex4_transcoding_multichannelToAmbisonics.py  ex5_optimal decoder.py  ex5_vbap.py  ex6-microphone_encoding_to_ambisonics.py  ex7_pv_upsampling_512to714.py  ex_714To5OAmbisonics.py  ex_ambisonics_decoding_50Ato714.py  ex_decoding_301irregular.py  ex_multichannelDecoder.py  ex_multichannelDecoder502.py  examples_case1-2-allrad_decoding_results.py  panning_plots.py  pyproject.toml  requirements.txt
allrad_decoders/: 704ordered_decoder.json  allrad_50_FOA_basic_decoder.json  allrad_50_FOA_inphase_decoder.json  allrad_50_FOA_layout.json  allrad_50_FOA_maxre_decoder.json  allrad_704_5OA_basic_decoder.json
examples/: case1-2-ambisonics_decoding.py  case3-downmix-vbap_decoding.py  case4-panning_multichannel.py  case4-panning_no_optim.py
old_examples/: case1-2-ambisonics_decoding.py  case3-downmix-vbap_decoding.py  case4-panning_multichannel.py  case4-panning_no_optim.py  ex2_ambisonics_decoding_FOAto51.py  ex3_ei_transcoding_714to512.py  ex3_pv_transcoding_714to512.py  ex4_3D_transcoding_multichannelToAmbisonics.py  ex7_pv_upsampling_512to714.py  ex8_ei_transcoding_714to714.py  ex_multichannelDecoder502.py  (+2 more)
(+60 files in other folders)
